# rpggametry

./: CMakeLists.txt  README.md  vcpkg.json
include/: config.hpp  game.hpp  player.hpp  scene.hpp  world.hpp
include/battle/: battleController.hpp  battleTypes.hpp
include/dialogue/: dialogue.hpp  dialogueController.hpp  dialogueContrroller.hpp  dialogueDatabase.hpp
include/enemy/: enemyData.hpp  enemyDatabase.hpp
include/game/: game.hpp  gameState.hpp
include/npc/: npcData.hpp  npcDatabase.hpp
include/player/: player.hpp  playerStats.hpp
include/quest/: questData.hpp  questDatabase.hpp  questJournal.hpp  questSystem.hpp
include/scene/: scene.hpp  sceneObjectFactory.hpp
include/world/: world.hpp  worldData.hpp
src/: game.cpp  main.cpp  player.cpp  scene.cpp  world.cpp
src/battle/: battleController.cpp
src/dialogue/: dialogueController.cpp  dialogueContrroller.cpp  dialogueDatabase.cpp
src/enemy/: enemyDatabase.cpp
src/game/: game.cpp  gameState.cpp
src/npc/: npcDatabase.cpp
src/player/: player.cpp  playerStats.cpp
src/quest/: questDatabase.cpp  questJournal.cpp  questSystem.cpp
src/scene/: scene.cpp  sceneObjectFactory.cpp
src/world/: world.cpp  worldData.cpp
